# log_anomaly_detection

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  main_with_mcp.py  models.py
app/agents/: alert.py  detector.py  preprocessor.py  sink.py  stream_watcher.py
app/knowledge_base/: json_to_kb.py  kb.json  load_model.py
app/knowledge_base/faiss_store/: index.faiss  index.pkl
app/mcp_setup/: anomaly_server.py  client.py  rag_server.py  server.py
tools/: push_logs.py
